[workspace]
resolver = "2"
members = [
    "packet-strata-lib",
    "pcap-reader",
]
default-members = [
    "packet-strata-lib",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nicola Bonelli <nicola.bonelli@larthia.com>"]
description = "A high-performance packet parsing library"
license = "MIT"
categories = ["network-programming", "parser-implementations"]
keywords = ["ether", "sll", "ipv4", "ipv6", "udp", "tcp", "icmp", "tunnel", "networking"]

[workspace.dependencies]
smallvec = "1.13"
smol_str = "0.3"
thiserror = "2.0"
zerocopy = { version = "0.8.30", features = ["derive"] }

# PCAP parsing
pcap-parser = "0.15"

# CLI and utilities
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Date/time
chrono = "0.4"

[profile.release]
debug = false
opt-level = 3
strip = true
codegen-units = 1
lto = true
