[package]
name = "packet-strata"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pcap-parser.workspace = true
ahash = "0.8.12"
hashlink = "0.11.0"
smallvec = { workspace = true, features = ["const_new"] }
smol_str.workspace = true
thiserror.workspace = true
zerocopy.workspace = true
serde.workspace = true
chrono.workspace = true
